--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,37 @@ services:
       - postgres_data:/var/lib/postgresql/data
     restart: always
 
+  # --- Flywayサービス ---
+  flyway:
+    image: flyway/flyway:10
+    command: >
+      -url=jdbc:postgresql://db:5432/${POSTGRES_DB} 
+      -user=${POSTGRES_USER:-postgres} 
+      -password=${POSTGRES_PASSWORD} 
+      -connectRetries=60 
+      -baselineOnMigrate=true 
+      migrate
+    volumes:
+      # root/flyway/sql をコンテナ内の /flyway/sql に繋ぐ
+      - ./flyway/sql:/flyway/sql
+    depends_on:
+      - db
+
+  # --- Scraperサービス (修正箇所) ---
   scraper:
     build: ./scraper
     container_name: sf6_scraper
-    # こちらも.envから読み込み（DATABASE_URL, TARGET_PLAYER_ID, MY_PLAYER_NAME）
     env_file:
       - .env
     volumes:
       - ./scraper:/app
     ports:
-      - "8501:8501" # Streamlit管理画面用
+      - "8501:8501"
     depends_on:
-      - db
+      db:
+        condition: service_started
+      flyway:
+        condition: service_completed_successfully
     restart: always
 
   metabase:
