envの元ネタ修正と、Readme更新

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# DB設定
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=sf6_stats
+
+# アプリ用設定
+DATABASE_URL=postgresql://DBユーザー名:DBのパスワード@db:5432/sf6_stats
 TARGET_PLAYER_ID=あなたのIDをここに入力
 MY_PLAYER_NAME=あなたの名前をここに入力
-DATABASE_URL=postgresql://DBのユーザーID:DBのパスワード@db:5432/sf6_stats
