外部にmatadataを公開する仕様を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,20 @@ services:
     depends_on:
       - db
     restart: always
+  
+  tunnel:
+    image: cloudflare/cloudflared:latest
+    container_name: sf6_tunnel
+    command: tunnel --url http://metabase:3000 --metrics 0.0.0.0:2000
+    restart: always
+    depends_on:
+      - metabase
+    profiles:
+      - external
+    networks:
+      default:
+        aliases:
+          - sf6_tunnel
 
 volumes:
   postgres_data:
