discordBot系の中身更新

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ POSTGRES_DB=sf6_stats
 DATABASE_URL=postgresql://DBユーザー名:DBのパスワード@db:5432/sf6_stats
 TARGET_PLAYER_ID=あなたのIDをここに入力
 MY_PLAYER_NAME=あなたの名前をここに入力
+
+# DiscordBot設定
+DISCORD_BOT_TOKEN=DiscordのTokenを設定
+DISCORD_WEBHOOK_URL=DiscordのWebhookのURLを設定
+
+# 共通ログイン情報（任意設定）
+SHARED_LOGIN_ID=your_id_here
+SHARED_LOGIN_PW=your_password_here
