--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     depends_on:
       - db
 
-  # --- Scraperサービス (修正箇所) ---
+  # --- Scraperサービス ---
   scraper:
     build: ./scraper
     container_name: sf6_scraper
@@ -72,16 +72,18 @@ services:
         aliases:
           - sf6_tunnel
   
+  # --- Discord Botサービス ---
   discord-bot:
     build: ./discord_bot
     container_name: sf6_discord_bot
     env_file:
       - .env
     environment:
-      - PYTHONPATH=/app
+      # /app(bot.pyがある場所) と /app/shared(database.pyがある場所) の両方にパスを通す
+      - PYTHONPATH=/app:/app/shared
     volumes:
       - ./discord_bot:/app
-      - ./scraper:/app  # scraperにある共有ファイルを/app直下にマウント
+      - ./scraper:/app/shared  # scraperをsharedというサブフォルダとしてマウント
     depends_on:
       - db
     profiles:
